--- a/app/src/main/res/layout/categories_card_layout.xml
+++ b/app/src/main/res/layout/categories_card_layout.xml
@@ -31,7 +31,12 @@
             android:id="@+id/idIVCategoryImage"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_margin="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
             android:contentDescription="Catégories"
             android:padding="5dp"
             android:src="@drawable/ic_launcher_foreground" />
